# rustick

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
lib/: Cargo.toml
lib/src/: encryption.rs  filter.rs  lib.rs  list.rs  project.rs  todo.rs
server/: Cargo.toml
server/src/: main.rs
server/static/: index.html
ui/: Cargo.toml  index.html  index.scss
ui/src/: components.rs  lib.rs  lists_list.rs  main.rs  project_list.rs  todo_ui.rs
ui/src/components/: header.rs
ui/src/todo_item/: mod.rs
