[package]
name = "rustick"
version = "0.1.0"
authors = ["Lane Sawyer <github@lanesawyer.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.4", features = ["serde", "v4"] }
serde = "1.0"
serde_derive = "1.0"
