[package]
name = "rustick"
version = "0.1.0"
authors = ["Lane Sawyer <github@lanesawyer.dev>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
