[package]
name = "rustick-ui"
version = "0.1.0"
authors = ["Lane Sawyer <github@lanesawyer.dev>"]
edition = "2018"

# Build with:
# wasm-pack build --target web --out-name wasm --out-dir ../server/static

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.16"
wasm-bindgen = "0.2"
web-sys = "0.3.40"
